# wordford

./: Cargo.toml  Dockerfile  README.md  deploy.sh
migrations/: 20250614235608_create_content_table.sql  20250614235608_initialize_database.sql  20250624223634_create_users_table.sql
public/: clear_search_on_blur.js  ctrl_k_to_search.js  main.css  slash_to_search.js
src/: lib.rs  main.rs
src/api/apps/: app_repository.rs  app_routes.rs  app_service.rs  mod.rs
src/api/content/: content_repository.rs  content_routes.rs  content_service.rs  mod.rs
src/api/pages/: mod.rs  page_repository.rs  page_routes.rs  (+1 more)
src/apps/: app_repository.rs  app_routes.rs  app_service.rs  mod.rs
src/content/: content_repository.rs  content_routes.rs  content_service.rs  mod.rs
src/extractors/: current_user.rs
src/models/: app.rs  content.rs  mod.rs  page.rs
src/orgs/: mod.rs  org_repository.rs  org_routes.rs  org_service.rs
src/pages/: mod.rs  page_repository.rs  page_routes.rs  page_service.rs
src/repositories/: apps.rs  content.rs  pages.rs
src/routes/: apps.rs  content.rs  homepage.rs  pages.rs
src/services/: apps.rs  content.rs  mod.rs  pages.rs
src/user/: auth.rs  mod.rs  repository.rs  routes.rs  service.rs
templates/apps/: _search_autofill.html  form.html  index.html  new.html  new_page.html  new_page_form.html  search_results.html
templates/auth/: signin.html  signin_form.html
templates/content/: edit.html  form.html  list_view.html
templates/homepage/: index.html
templates/pages/: create_content.html  index.html
templates/shared/: footer.html  head.html  navbar.html
templates/user/: create_user_form.html  signup.html
