[package]
name = "wordford"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = "1.0.140"
slug = "0.1.6"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
tera = "1.20.0"
tokio = { version = "1", features = ["full"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
