[package]
name = "wordford"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"]}
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
slug = "0.1.6"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
tera = "1.20.0"
time = "0.3.41"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "set-header", "compression-full"] }
